[tool.poetry]
name = "helper-bot"
version = "0.1.0"
description = "'digital note book'"
authors = ["Aleksandr <aleksandr.voitushenko@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
wcwidth = "0.2.13"

[tool.poetry.scripts]
helper = "helper_bot.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
